  Services, www.flightdataservices.com).
- Tick color is now auto-generated as the base color with some
  transparency (unless you override it).
- Support for aligning ticks in the axes with "alignTicksWithAxis" to
  ensure that they appear next to each other rather than in between,
  at the expense of possibly awkward tick steps (sponsored by Flight
  Data Services, www.flightdataservices.com).

- New hooks: drawSeries

Bug fixes:

- Fixed problem with findNearbyItem and bars on top of each other
  (reported by ragingchikn, issue 242).
- Fixed problem with ticks and the border (based on patch from
  ultimatehustler69, issue 236).
- Fixed problem with plugins adding options to the series objects.
- Fixed a problem introduced in 0.6 with specifying a gradient with {
  brightness: x, opacity: y }.
- Don't use $.browser.msie, check for getContext on the created canvas
  element instead and try to use excanvas if it's not found.
- highlight(s, index) was looking up the point in the original s.data
  instead of in the computed datapoints array, which breaks with
  plugins that modify the datapoints (such as the stacking plugin).
  Issue 316 reported by curlypaul924.
- More robust handling of axis from data passed in from getData()
  (problem reported by Morgan).
- Fixed problem with turning off bar outline (issue 253, fix by Jordi
  Castells).
- Check the selection passed into setSelection in the selection
  plugin, to guard against errors when synchronizing plots (fix by Lau
  Bech Lauritzen).
- Fix bug in crosshair code with mouseout resetting the crosshair even
  if it is locked (fix by Lau Bech Lauritzen). 

Flot 0.6
--------

API changes:

1. Selection support has been moved to a plugin. Thus if you're
passing selection: { mode: something }, you MUST include the file
jquery.flot.selection.js after jquery.flot.js. This reduces the size
of base Flot and makes it easier to customize the selection as well as